using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class Constants : MonoBehaviour
{
    //constants values never change. We can use them in every script.
    public const string LASER_TAG = "laser";
    public const string HORIZONTAL = "Horizontal";
    public const string VERTICAL = "Vertical";
    public const string PLAYER_AREA_TAG = "playerArea";
    public const string BALL_TAG = "ball";
    public const string PLAYER_TAG = "Player";
    public const string COIN_TAG = "coin";
    public const string RUNNING_ANIM = "isRunning";
    public const string JUMPING_ANIM = "isJumping";
    public const string DEAD_ANIM = "isDead";
}
